revert back to H2 Database and fix some bugs
