# src/main/java/com/java/inventory/system/model/Product.java
@@ -2,30 +2,27 @@ package com.java.inventory.system.model;
 
 import jakarta.persistence.Entity;
 import jakarta.persistence.Id;
+import jakarta.persistence.PrePersist;
+import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.math.BigDecimal;
+import java.util.UUID;
 
 @Entity
 @Data
 @Builder
+@NoArgsConstructor // ✅ fixes the error
+@AllArgsConstructor
 public class Product {
     @Id
-    private Long id;
-    private String productName;
+    private String id;
+    private String itemName;
     private String description;
-    private String productType;
+    private String category;
+    private BigDecimal unitPrice;
     private int quantity;
-    private double unitPrice;
-
-    public Product() {
-    }
-
-    public Product(Long id, String productName, String description, String productType, int quantity, double unitPrice) {
-        this.id = id;
-        this.productName = productName;
-        this.description = description;
-        this.productType = productType;
-        this.quantity = quantity;
-        this.unitPrice = unitPrice;
-    }
+    private String unit;
 }
